src/test/deca/syntax/invalid/provided/if_then_else_invalide3.deca
{
if(7>5){
print(true);
}else if{
}
